# CasareRPA

./: %APPDATA%postgresqlpgpass.conf  .dockerignore  .env  .env.example  .env.new  .env.template  .gitattributes  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  =2.1.0  @AutomationLog.txt  AGENT.md  AGENTS.md  AGENTS.minimal.md  AUTOCONNECT_FIXES.md  AUTOCONNECT_SUMMARY.md  AUTOCONNECT_TESTING.md  BUILD_REPORT.md  CHANGELOG.md  CHANGES_APPLIED.md  CLAUDE.md  CODEBASE_IMPROVEMENT_REPORT.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REVIEW.md  COMPLETE_IMPLEMENTATION.md  CONTRIBUTING.md  CONTROLLERS_MIGRATION_GUIDE.md  COUPLING_FIX_SUMMARY.md  DB_CONNECTION_ERROR.md  DEBUGGING_SYSTEM_SUMMARY.md  DEPLOY.md  DEVELOPMENT_ROADMAP.md  DOCKER_DEPLOYMENT_SUMMARY.md  FINAL_STATUS_REPORT.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  LAUNCH_FIXED.md  (+143 more)
.agent/: code-review-improvements.md  legacy_settings.json  legacy_settings.local.json
.brain/: COMMAND_DESIGN_PATTERNS.md  _index.md  activeContext.md  dependencies.md  performance-baseline.md  projectRules.md  ruff_violations_report.md  symbols.md  systemPatterns.md
.brain.backup.20251229/: _index.md  errors.md  systemPatterns.md
.chroma/: index_cache.json
.claude/: TASK_ROUTING.md  _index.md  cclsp.json  claude-full.json  claude-minimal.json  claude-standard.json  context-optimization.md  mcp.json  settings.json  settings.local.json
.cloud/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
.opencode/: mcp_config.json  test_config.json
.qdrant/: meta.json
.serena/: project.yml
_tmp/: collect.txt
agent-rules/: _index.md
config/: .env.example  __init__.py  ai_agent_config.example.json  ai_agent_config.json  loader.py  recent_files.json  schema.py  settings.example.json  settings.json  startup.py
demos/: demo_debugging.py  demo_error_handling.py  demo_phase2.py  demo_phase3.py  demo_phase4.py
deploy/: BUILD_ROBOT_INSTALLER.bat  CLIENT_DEPLOYMENT.md  SETUP_AND_BUILD.bat  auto_setup.py  fix_schema.py  quickstart.py  setup_via_rest.py  vm_robot_setup.py
docs/: AETHER_STATUS.md  API_REFERENCE.md  ARCHITECTURE.md  AUTO_CONNECT_FEATURE.md  CANVAS_MIGRATION_PLAN.md  CANVAS_REFERENCE.md  ERROR_CODES.md  EVENT_BUS_IMPLEMENTATION_SUMMARY.md  EVENT_BUS_MIGRATION_GUIDE.md  EVENT_BUS_QUICK_REFERENCE.md  EVENT_BUS_STATUS.md  EVENT_BUS_SYSTEM.md  FRONTEND_FIXES_REQUIRED.md  GITHUB_ISSUES.md  HYBRID_DEPLOYMENT.md  IMPORT_MIGRATION_REPORT.md  INDEX.md  INSTALLATION.md  MIGRATION_GUIDE_V3.md  MIGRATION_GUIDE_WEEK2.md  MONITORING_API_SECURITY_FIXES.md  NODE_REFERENCE.md  ORCHESTRATOR_REFERENCE.md  PHASE1_FOUNDATION.md  PHASE2_MIGRATION_SUMMARY.md  PHASE2_QUEUE_MIGRATION.md  PHASE3_2_WORKFLOW_DECORATION.md  PHASE3_3_ORCHESTRATOR_QUEUE_INTEGRATION.md  PHASE3_DURABLE_EXECUTION.md  PHASE4_SELF_HEALING.md  POST_WEEK6_ROADMAP.md  PR_OVERLAP_ANALYSIS.md  QUICK_START.md  README.md  RESEARCH_PROMPT.md  ROADMAP.md  ROADMAP_COMPLETE.md  ROADMAP_ROBOT_ORCHESTRATION.md  ROAD_MAP.md  ROBOT_HARDENING_API.md  (+20 more)
examples/: multi_agent_chain_example.py
installer/: README.md  build_dev_installer.py  generate_assets.py
migrations/: 001_robot_hardening.sql
monitoring-dashboard/: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
plans/: refactor-program-backlog.md
pyperclip/: __init__.py
scripts/: __init__.py  add_node_tags.py  aggressive_theme_replace.py  ai_notepad_workflow.py  apply_atla_logic.py  archive_brain_analysis.py  archive_old_plans.py  audit_codebase.py  audit_node_modernization.py  audit_node_schemas.py  audit_ui_consistency.py  batch_theme_refactor.py  benchmark_search.py  bulk_theme_replace.py  check_agent_path_hygiene.py  check_agent_rule_updates.py  check_application_purity.py  check_blocking_io.py  check_domain_purity.py  check_event_serialization.py  check_http_client_usage.py  check_index_updates.py  check_logger_usage.py  check_node_port_definitions.py  check_node_registry_sync.py  check_not_main_branch.py  check_presentation_dependency_direction.py  check_secrets.py  check_signal_slot_usage.py  check_syntax.py  check_theme_colors.py  chroma_search_mcp.py  clean_workflow.py  code_metrics.py  compress_prompts.py  create_plan.py  create_worktree.py  demo_orchestrator.py  demo_robot.py  deploy.sh  (+70 more)
src/: performance_optimization.md
supabase/: config.toml
templates/: README.md  ai_notepad_automation.json  api_polling.json  calculator_to_notepad.json  database_sync.json  email_processing.json  excel_data_extraction.json  file_organization.json  manual_notepad_workflow.json  multi_agent_chain.json  notepad_automation_with_variables.json  pdf_generation.json  rpachallenge_smartagent.json  simple_web_automation.json  web_form_automation.json
test_cache_dir/: cache.db
test_workflows/: test_execution.json
tests/: __init__.py  conftest.py  repro_calc_launch.py  test_advanced_error_handling.py  test_application_nodes.py  test_autoconnect.py  test_basic_nodes.py  test_basic_workflows.py  test_browser_nodes_chaos.py  test_circuit_breaker.py  test_comprehensive_selectors.py  test_control_flow.py  test_control_flow_enhanced.py  test_control_flow_nodes.py  test_core.py  test_data_operation_nodes.py  test_data_operations.py  test_data_scenarios.py  test_database_nodes.py  test_debugging.py  test_deprecated_imports.py  test_desktop_application_nodes.py  test_desktop_context.py  test_desktop_element.py  test_desktop_element_nodes.py  test_desktop_interaction_nodes.py  test_desktop_mouse_keyboard_nodes.py  test_desktop_recorder.py  test_desktop_screenshot_ocr_nodes.py  test_desktop_selector.py  test_desktop_wait_verification_nodes.py  test_desktop_window_nodes.py  test_email_nodes.py  test_error_handling_nodes.py  test_error_scenarios.py  test_file_nodes.py  test_file_system_nodes.py  test_foundation.py  test_fuzzy_search.py  test_fuzzy_search_performance.py  (+60 more)
tests_temp/: __init__.py  conftest.py  test_autoconnect.py  test_config.py  (+21 more)
(+3748 files in other folders)
