# ============================================================================
# CasareRPA - Windows Desktop RPA Platform
# Build Configuration & Project Metadata
# ============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casare-rpa"
version = "3.0.0"  # BREAKING: Clean architecture migration - see docs/MIGRATION_GUIDE_V3.md
description = "High-Performance Windows Desktop RPA Platform with Visual Node-Based Workflow Editor and Clean Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "CasareRPA Team", email = "dev@casarerpa.com"}
]
keywords = ["rpa", "automation", "playwright", "desktop", "workflow", "visual-programming", "clean-architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "setuptools>=68.0",  # Python 3.12 distutils compatibility for NodeGraphQt
    "PySide6>=6.6.0",
    "PySide6-Addons>=6.6.0",
    "NodeGraphQt>=0.6.30",
    "playwright>=1.40.0",
    "qasync>=0.27.0",
    "orjson>=3.9.10",
    "loguru>=0.7.2",
    "psutil>=5.9.0",
    "uiautomation>=2.0.20",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "hvac>=2.1.0",
    "APScheduler>=3.10.0,<4.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "aiomysql>=0.2.0,<1.0.0",
    "simpleeval>=0.9.13",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-qt>=4.3.1",
    "pytest-cov>=4.0.0",
    "black>=23.12.0",
    "mypy>=1.7.1",
    "ruff>=0.1.0",
    "pip-audit>=2.6.0",
]
service = [
    "pywin32>=306",
]

[project.urls]
Homepage = "https://github.com/omerlefaruk/CasareRPA"
Documentation = "https://github.com/omerlefaruk/CasareRPA/docs"
Repository = "https://github.com/omerlefaruk/CasareRPA"
Issues = "https://github.com/omerlefaruk/CasareRPA/issues"

[project.scripts]
casare-rpa = "casare_rpa.canvas.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=casare_rpa --cov-fail-under=75"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]
