# ============================================================================
# CasareRPA - Windows Desktop RPA Platform
# Build Configuration & Project Metadata
# ============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casare-rpa"
version = "3.0.0"  # BREAKING: Clean architecture migration - see docs/MIGRATION_GUIDE_V3.md
description = "High-Performance Windows Desktop RPA Platform with Visual Node-Based Workflow Editor and Clean Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "CasareRPA Team", email = "dev@casarerpa.com"}
]
keywords = ["rpa", "automation", "playwright", "desktop", "workflow", "visual-programming", "clean-architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "setuptools>=68.0",  # Python 3.12 distutils compatibility for NodeGraphQt
    "PySide6>=6.6.0",
    "PySide6-Addons>=6.6.0",
    "NodeGraphQt>=0.6.30",
    "playwright>=1.50.0",  # Requires greenlet>=3.2.0 for Python 3.14 compatibility
    "qasync>=0.27.0",
    "orjson>=3.9.10",
    "loguru>=0.7.2",
    "psutil>=5.9.0",
    "uiautomation>=2.0.20",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "hvac>=2.1.0",
    "APScheduler>=3.10.0,<4.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "aiomysql>=0.2.0,<1.0.0",
    "simpleeval>=0.9.13",
    "numpy>=1.24.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "email-validator>=2.0.0",
    "websockets>=14.0",
    "python-multipart>=0.0.6",  # Required for FastAPI file uploads (UploadFile)
    "croniter>=1.3.0",  # Required for cron expression validation in schedules
    "slowapi>=0.1.9",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",  # Password hashing for user authentication
    "qrcode>=7.4.0",  # QR code generation for MFA setup
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pywin32>=306",  # Office automation (Excel, Word, Outlook via COM)
    "defusedxml>=0.7.0",  # Secure XML parsing (prevents XXE attacks)
    # "python-tuf>=3.1.0",  # Disabled: no Python 3.13 wheels yet
    # AI Assistant
    "anthropic>=0.40.0",  # Claude API for AI assistant
    "langchain>=0.3.0",  # LLM orchestration
    "langchain-anthropic>=0.3.0",  # Claude integration for langchain
    "litellm>=1.50.0",  # Unified LLM API (OpenAI, Anthropic, Azure, local)
    # RAG / Vector Store (lazy loaded)
    "chromadb>=0.4.0",  # Vector database for semantic search
    "sentence-transformers>=2.2.0",  # Local embeddings (optional)
    # Desktop automation extras
    "keyboard>=0.13.5",  # Global keyboard hooks and hotkeys
    "pyperclip>=1.8.0",  # Cross-platform clipboard operations
    # Data processing
    "openpyxl>=3.1.0",  # Excel file read/write
    "beautifulsoup4>=4.12.0",  # HTML parsing for browser automation
    "lxml>=5.0.0",  # Fast XML/HTML parser
    # Caching
    "aiocache>=0.12.0",  # Async memory caching
    "diskcache>=5.6.0",  # Persistent disk caching
    "lz4>=4.3.0",  # Fast compression for cache entries
    # Process Mining (optional - lazy loaded)
    "pm4py>=2.7.0",  # Process mining algorithms (Alpha, Inductive, Heuristic Miner)
    # Async file I/O
    "aiofiles>=23.0.0",  # Non-blocking file operations
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-qt>=4.3.1",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.12.0",
    "mypy>=1.7.1",
    "ruff>=0.1.0",
    "pip-audit>=2.6.0",
]
service = [
    # pywin32 moved to main dependencies for office automation
]
# Cloud vault providers (optional)
azure = [
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
]
aws = [
    "boto3>=1.34.0",
]
# All cloud providers
cloud = [
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    "boto3>=1.34.0",
]

[project.urls]
Homepage = "https://github.com/omerlefaruk/CasareRPA"
Documentation = "https://github.com/omerlefaruk/CasareRPA/docs"
Repository = "https://github.com/omerlefaruk/CasareRPA"
Issues = "https://github.com/omerlefaruk/CasareRPA/issues"

[project.scripts]
casare-rpa = "casare_rpa.canvas.app:main"
generate-node-tests = "tools.generate_node_tests:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
# Gradual type adoption - start lenient, tighten over time
warn_return_any = false  # Too noisy initially
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped during transition
disallow_incomplete_defs = false  # Allow partial during transition
check_untyped_defs = true  # Still check untyped code
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Don't fail on unused ignores in transition
strict_equality = true
ignore_missing_imports = true  # Don't fail on missing stubs

# Per-module overrides - stricter for domain layer
[[tool.mypy.overrides]]
module = "casare_rpa.domain.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "casare_rpa.nodes.*"
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: mark test as unit test (fast, isolated, no external deps)",
    "integration: mark test as integration test (may use external systems)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks end-to-end tests",
    "ui: mark test as requiring UI/Qt components",
    "browser: mark test as requiring browser/Playwright",
    "database: mark test as requiring database",
    "network: mark test as requiring network access",
    "chaos: mark test as chaos/stress test",
]
